--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+          <li><a href="home.html"> Home </a></li>
+          <li><a href="about.html"> About Us </a></li>
+          <li><a href="products.html"> Products </a></li>
+        </ul>
+      </nav>
 </body>
 </html>
