--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
+    <div class="topnav">
         <ul>
           <li><a href="home.html"> Home </a></li>
           <li><a href="about.html"> About Us </a></li>
           <li><a href="products.html"> Products </a></li>
         </ul>
-      </nav>
+    </div>
 </body>
 </html>
