started on my personal portfolio

--- a/index.html
+++ b/index.html
@@ -6,15 +6,32 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <div class="topnav">
-        <ul>
-          <li><a href="home.html"> Home </a></li>
-          <li><a href="about.html"> About Us </a></li>
-          <li><a href="products.html"> Products </a></li>
-        </ul>
+          <a href="index.html"> Home </a>
+          <a href="about.html"> About Me </a>
+          <a href="products.html"> Hobbies </a>
+    </div>
+    <div class="wrap">
+        <img 
+            class="background"
+            src="background.jpg"
+            alt="">
+        <div class="content">
+            <img
+                class="meimage"
+                src="me.jpg"
+                width="400"
+                height="500" 
+                alt="">
+        </div>
+        <div class="contenttxt">
+            <h1></h1><br>John Michael J. Jantay
+                <br>BSIT Student
+            </h1>
+        </div>
     </div>
 </body>
 </html>
