--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Home</title>
 </head>
 <body>
@@ -14,24 +15,32 @@
           <a href="about.html"> About Me </a>
           <a href="products.html"> Hobbies </a>
     </div>
-    <div class="wrap">
-        <img 
-            class="background"
-            src="background.jpg"
-            alt="">
-        <div class="content">
-            <img
-                class="meimage"
-                src="me.jpg"
-                width="400"
-                height="500" 
-                alt="">
+        <div class="image">
+            <img class="meimage" src="me1.png" width="400" height="600"  alt="">
+            <a href="https://web.facebook.com/Genosect101/" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/Genosect_Osu" class="fa fa-twitter"></a>    
         </div>
         <div class="contenttxt">
-            <h1></h1><br>John Michael J. Jantay
-                <br>BSIT Student
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1>John Michael J. Jantay
+                <br>BS<san class="IT">IT</san> Student
             </h1>
+            <br>
+            <br>Hi! I am John Michael J. Jantay. 
+            <br> 2nd year college student 
+            <br>at the University of Science and Technology of the Southern Philippines
+            <br>
         </div>
-    </div>
+
 </body>
 </html>
