--- a/about.html
+++ b/about.html
@@ -5,16 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
     <div class="topnav">
         <a href="index.html"> Home </a>
         <a href="about.html"> About Me </a>
-        <a href="products.html"> Hobbies </a>
     </div>
     <div class="image">
     <img class="meimage" src="me.png" width="400" height="600"  alt="">
+    </div>
+    <br><br><br><br><br><br><br><br><br>
+    <div class="text">
+        
+        <h1> About <san class="me">Me</san></h1>
+        <br>I am a 20 years old college student.
+        <br>I live in Zone 2, Bonbon, Opol, Misamis Oriental.
+        <br>My hobbies are playing video games, reading manga, and hanging out with my friends.
+        <br>
+        <br>I enrolled in BSIT because I was inspired by my uncles who is also a BSIT.
+        <br>I plan to learn a lot in this subject and I hope that this semester will go smoothly.
+    </div>
+    <div class="footer">
+        Contact me on:  
+        <a href="https://web.facebook.com/Genosect101/" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/Genosect_Osu" class="fa fa-twitter"></a>
+        
     </div>
 </body>
 </html>
