--- a/index.html
+++ b/index.html
@@ -13,25 +13,12 @@
     <div class="topnav">
           <a href="index.html"> Home </a>
           <a href="about.html"> About Me </a>
-          <a href="products.html"> Hobbies </a>
     </div>
         <div class="image">
             <img class="meimage" src="me1.png" width="400" height="600"  alt="">
-            <a href="https://web.facebook.com/Genosect101/" class="fa fa-facebook"></a>
-            <a href="https://twitter.com/Genosect_Osu" class="fa fa-twitter"></a>    
         </div>
         <div class="contenttxt">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+            <br><br><br><br><br><br><br><br><br><br><br>            
             <h1>John Michael J. Jantay
                 <br>BS<san class="IT">IT</san> Student
             </h1>
@@ -40,6 +27,12 @@
             <br> 2nd year college student 
             <br>at the University of Science and Technology of the Southern Philippines
             <br>
+        </div>
+        <div class="footer">
+            Contact me on:  
+            <a href="https://web.facebook.com/Genosect101/" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/Genosect_Osu" class="fa fa-twitter"></a>
+            
         </div>
 
 </body>
